.multicolumn-list no longer wraps to new column inside of list items.

--- a/ambientimpact_base/stylesheets/elements/_list.scss
+++ b/ambientimpact_base/stylesheets/elements/_list.scss
@@ -65,6 +65,19 @@ $list-multicolumn-gap: $list-marker-indent + $general-spacing !default;
     column-count: $list-multicolumn-count;
     column-width: $list-multicolumn-width;
     column-gap:   $list-multicolumn-gap;
+
+    li {
+      // Don't break to a new column within list items.
+      //
+      // @see http://stackoverflow.com/a/7785711
+
+      // Chrome and Safari.
+      -webkit-column-break-inside: avoid;
+      // Firefox 20+.
+      page-break-inside: avoid;
+      // IE 11.
+      break-inside: avoid-column;
+    }
   }
 }
 
